Replace boost join with absl::StrJoin() and "fix" CMakeLists.txt with lib/test paths.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,10 @@
 project (graphs)
 cmake_minimum_required(VERSION 2.8)
-include(../vcpkg/scripts/buildsystems/vcpkg.cmake)
 
-include_directories(../vcpkg/packages/boost_x86-windows/include)
-include_directories(../vcpkg/packages/range-v3_x86-windows/include)
+include_directories(".")
+include_directories("../vcpkg/packages/abseil_x86-windows/include")
+include_directories("../vcpkg/packages/range-v3-vs2015_x86-windows/include")
 
-file(GLOB SOURCES "*.cc")
+file(GLOB SOURCES "lib/*.cc" "tests/*.cc")
 
 add_executable(main ${SOURCES})
-
-# target_link_libraries(bfs
-#   ${Boost_FILESYSTEM_LIBRARY}
-#   ${Boost_SYSTEM_LIBRARY}
-#   ${PROTOBUF_LIBRARY}
-# )
