--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -8,7 +8,6 @@ set(SOURCES
 add_library(algo_lib ${SOURCES})
 
 # Depend on a libraries defined in the top-level file.
-# target_link_libraries(algo_lib
-#     abseil
-#     range-v3
-# )
+target_link_libraries(algo_lib
+  absl::strings
+)
