--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/abseil-cpp"]
 	path = libs/abseil-cpp
 	url = https://github.com/abseil/abseil-cpp.git
+[submodule "libs/range-v3"]
+	path = libs/range-v3
+	url = https://github.com/ericniebler/range-v3.git
